Changelog
=========

2.1a2 - Unreleased
------------------

- Fixed minor test failure for ``_doAddUser``.
  [maurits]

2.1a1 - 2011-01-18
------------------

- Test Products.CMFPlone version to set default permission, keeping 4.0
  compatibility - the next release can be 2.0.1 again.
  [elro]

- Add autoinclude entry point.
  [elro]

- Update permission defaults for Plone 4.1's Site Administrator role.
  [elro]

2.0 - 2010-07-18
----------------

- Fixed the info viewlet to show only the date, and not the time.
  The issue was introduced because ulocalized_time changed its parameters order.
  This closes http://dev.plone.org/plone/ticket/10759.
  [vincentfretin]

- Update license to GPL version 2 only.
  [hannosch]

- Add id="content" for the content divs. Else theming with deliverance gets
  harder.
  [do3cc]

2.0b2 - 2010-06-03
------------------

- Add naive upgrade step that reinstalls the product.
  [davisagli]

- Set action icons via icon_expr on the actions, to avoid deprecation warnings
  in Plone 4.
  [davisagli]

2.0b1 - 2010-02-17
------------------

- Declare all package dependencies.
  [hannosch]

- Updated diff.pt to follow recent markup conventions.
  References #9981
  [spliter]

1.2.5 - 2010-01-03
------------------

* Fixed an undefined ``current_page_url`` variable in diff.pt. This closes
  http://dev.plone.org/plone/ticket/9819.
  [hannosch]

1.2.4 - 2008-12-21
------------------

* Added profiles/default/metadata.xml (version 120: lets leave plenty room in
  case any profile changes are needed on the 1.1 branch).
  [maurits]

* Avoid a test dependency on quick installer.
  [hannosch]

* Use our own PloneMessageFactory. We don't depend on CMFPlone anymore.
  [hannosch]

* Specified package dependencies.
  [hannosch]

* Made the tests independent of default content.
  [hannosch]

1.2.3 - 2008-11-14
------------------

* Fix assumption in control view: not every context object is
  IReferenceable. This fixes http://dev.plone.org/plone/ticket/8737